--- a/components/Alumnos_Mat_B2/Alumnos_Mat_B2.module.css
+++ b/components/Alumnos_Mat_B2/Alumnos_Mat_B2.module.css
@@ -6,8 +6,6 @@
 
 .typeLarge{
     font-size: large;
-    margin-bottom: 30px;
-    display: block;
 }
 
 .typeMedium{
@@ -28,6 +26,10 @@
 
 .alumnoInfoContainer{
     margin-left: 30px;
+    margin-bottom: 50px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 
@@ -56,4 +58,45 @@
 .table{
     height: 30vh;
     margin-bottom: 30px;
+    margin-left: 30px;
 }
+
+.modalBox
+{
+  position: absolute;
+  top: 50%;
+  left: 35%;
+  width: 600px;
+  background-color: var(--steelbluelowlight);
+  border: 2px solid var(--blue);
+  color: var(--bluehighlight);
+  box-shadow: 24;
+  padding: 30px 70px;
+}
+
+
+.allTextFields{
+    margin-top: 15px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.textFieldModal{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    height: 7vh;
+}
+
+.modalButtonsCont
+{
+    display: flex;
+    justify-content: flex-end;
+}
+
+.modalButton{
+    width: 100px;
+    margin-top: 20px;
+    margin-left: 20px;
+}
+
