--- a/styles/Courses.module.css
+++ b/styles/Courses.module.css
@@ -79,3 +79,38 @@
     border: 0.5px solid black;
     margin-bottom: 5px;
 }
+
+.modalBox
+{
+  position: absolute;
+  top: 25%;
+  left: 20%;
+  width: 700px;
+  background-color: var(--steelbluelowlight);
+  border: 2px solid var(--blue);
+  color: var(--bluehighlight);
+  box-shadow: 24;
+  padding: 30px 70px;
+}
+
+.modalButton{
+    margin-left: 20px;
+}
+
+.modalButtonsCont{
+    display: flex;
+    justify-content: flex-end;
+}
+
+.allTextFields{
+    display: flex;
+    height:28vh;
+    justify-content: space-between;
+}
+
+.textFieldModal{
+    display: flex;
+    flex-direction: column;
+    height: 8vh;
+    justify-content: space-around;
+}
