--- a/components/Aside/Aside.module.css
+++ b/components/Aside/Aside.module.css
@@ -6,17 +6,11 @@
   border-right: 1px solid var(--steelbluelowlight);
 }
 
-.li {
-  width: 100%;
-  padding: 20px 40px;
-  border-bottom: 1px solid var(--steelbluelowlight);
-}
-
 .button
 {
   align-items: start;
   align-self: flex-start;
   padding: 20px 10%;
-  color: black;
+  color: #2E2940;
   text-transform: capitalize;
 }
