--- a/components/Cursos_Ficha_Diploma/CoursesFicha.module.css
+++ b/components/Cursos_Ficha_Diploma/CoursesFicha.module.css
@@ -1,6 +1,5 @@
 .typeXSmall{
     font-size: x-small;
-    color: black;
 }
 
 .typeMedium{
@@ -9,7 +8,6 @@
 
 .typeXLarge{
     font-size: x-large;
-    color: black;
 }
 
 .buttonTop {
@@ -19,8 +17,8 @@
 .buttonImage
 {
     margin-top: 10px;
+    margin-bottom: 20px;
     width: 150px;
-    align-self: flex-end;
 }
 
 .button{
