--- a/styles/Users.module.css
+++ b/styles/Users.module.css
@@ -52,6 +52,8 @@
     display: flex;
     flex-direction: column;
     padding-right: 50px;
+    height:5vh;
+    justify-content: space-between;
 }
 
 .allSearchers{
