--- a/components/Alumnos_Mat_B2/Alumnos_Mat_B2.module.css
+++ b/components/Alumnos_Mat_B2/Alumnos_Mat_B2.module.css
@@ -1,99 +1,63 @@
-
-.typeXLarge{
-    font-size: x-large;
+.allTextFields {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 15px;
 }
-
-.typeLarge{
-    font-size: large;
+.alumnoInfoContainer {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 50px;
+  margin-left: 30px;
 }
-
-.typeMedium{
-    font-size: medium;
+.alumnoInfoTop {
+  align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+  height: 15vh;
+  justify-content: space-between;
+  padding: 30px 30px;
+  width: 80vw;
 }
-
-.typeMediumBold{
-    font-size: medium;
-    font-weight: bold;
+.alumnoRoute {
+  margin-left: 30px;
+  margin-top: 30px;
 }
-
-.typeXSmall{
-    font-size: x-small;
-}
-
-.alumnoInfoContainer{
-    margin-left: 30px;
-    margin-bottom: 50px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-
 .buttonTop {
-    margin-right: 30px;
-    font-size: medium;
-    height: 50px;
-    width: 250px;
+  font-size: medium;
+  height: 50px;
+  margin-right: 30px;
+  width: 250px;
 }
-
-.alumnoInfoTop{
-    padding: 30px 30px;
-    width: 80vw;
-    height: 15vh;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    justify-content: space-between;
-}
-
-.alumnoRoute{
-    margin-top: 30px;
-    margin-left: 30px;
-}
-
-.table{
-    height: 30vh;
-    margin-bottom: 30px;
-    margin-left: 30px;
-}
-
-.modalBox
-{
-  position: absolute;
-  top: 50%;
-  left: 35%;
-  width: 600px;
+.modalBox {
   background-color: var(--steelbluelowlight);
   border: 2px solid var(--blue);
-  color: var(--bluehighlight);
   box-shadow: 24;
+  color: var(--bluehighlight);
+  left: 35%;
   padding: 30px 70px;
+  position: absolute;
+  top: 50%;
+  width: 600px;
 }
-
-
-.allTextFields{
-    margin-top: 15px;
-    display: flex;
-    justify-content: space-between;
+.modalButton {
+  margin-left: 20px;
+  margin-top: 20px;
+  width: 100px;
 }
-
-.textFieldModal{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: flex-start;
-    height: 9vh;
+.modalButtonsCont {
+  display: flex;
+  justify-content: flex-end;
 }
-
-.modalButtonsCont
-{
-    display: flex;
-    justify-content: flex-end;
+.table {
+  height: 30vh;
+  margin-bottom: 30px;
+  margin-left: 30px;
 }
-
-.modalButton{
-    width: 100px;
-    margin-top: 20px;
-    margin-left: 20px;
+.textFieldModal {
+  align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+  height: 9vh;
+  justify-content: space-evenly;
 }
-
