--- a/components/Cursos_Ficha_Diploma/CoursesFicha.module.css
+++ b/components/Cursos_Ficha_Diploma/CoursesFicha.module.css
@@ -1,63 +1,41 @@
-.typeXSmall{
-    font-size: x-small;
+.button {
+  font-size: medium;
+  margin-left: 30px;
+  padding: 10px 10px;
+  width: 250px;
 }
-
-.typeMedium{
-    font-size: medium;
+.buttonImage {
+  margin-bottom: 20px;
+  margin-top: 10px;
+  width: 150px;
 }
-
-.typeXLarge{
-    font-size: x-large;
-}
-
 .buttonTop {
-    margin-right: 10px;
+  margin-right: 10px;
 }
-
-.buttonImage
-{
-    margin-top: 10px;
-    margin-bottom: 20px;
-    width: 150px;
+.coursesInfoTop {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
+  padding: 30px 40px;
+  width: 80vw;
 }
-
-.button{
-    margin-left: 30px;
-    padding: 10px 10px;
-    font-size: medium;
-    width: 250px;
+.coursesRoute {
+  margin-left: 20px;
+  margin-top: 30px;
 }
-
-.coursesInfoTop{
-    padding: 30px 40px;
-    width: 80vw;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+.diplomaContent {
+  margin-left: 30px;
 }
-
-.coursesRoute{
-    margin-top: 30px;
-    margin-left: 20px;
+.diplomaDiv {
+  display: flex;
+  flex-direction: column;
+  width: 30vw;
 }
-
-.diplomaContent{
-    margin-left: 30px;
+.diplomaTitle {
+  margin-top: 20px;
+  padding: 30px 0;
 }
-
-.diplomaTitle{
-    margin-top: 20px;
-    padding: 30px 0;
+.imageDiploma {
+  margin-bottom: 20px;
+  margin-top: 30px;
 }
-
-.diplomaDiv{
-    display: flex;
-    flex-direction: column;
-    width: 30vw;
-}
-
-.imageDiploma{
-    margin-bottom: 20px;
-    margin-top: 30px;
-}
-
