--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,48 +1,44 @@
-
-.typeXXSmall {
-    font-size: xx-small;
-}
-
-.typeMedium {
-    font-size: medium;
-    display: block;
-    margin-bottom: 15px;
-}
-
-.typeLarge {
-    font-size: large;
-    padding-bottom: 15px;
-}
-
-.typeXLarge {
-    font-size: xx-large;
-}
-
-.totalDiv {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 70px;
-}
-
 .coursesDiv {
-    width: 50%;
-    padding-right: 10%;
-    text-align: end;
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-right: 10%;
+  text-align: end;
+  width: 50%;
 }
-
+.homeContainer {
+  display: flex;
+  height: 100vh;
+  width: 80vw;
+}
 .studentsDiv {
-    width: 50%;
-    padding-left: 10%;
-    justify-content: center;
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  padding-left: 10%;
+  width: 50%;
 }
-
-.homeContainer{
-    height: 100vh;
-    width: 80vw;
-    display: flex;
+.totalDiv {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 70px;
+}
+.typeLarge {
+  display: block;
+  font-size: var(--lg);
+  margin-bottom: 20px;
+}
+.typeMedium {
+  display: block;
+  font-size: var(--med);
+  margin-top: 60px;
+}
+.typeSmall {
+  font-size: var(--sm);
+}
+.typeXSmall {
+  font-size: var(--xs);
+}
+.typeXLarge {
+  font-size: var(--xl);
 }
