--- a/styles/globals.css
+++ b/styles/globals.css
@@ -128,22 +128,7 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
-html,
-body {
-  font-family: 'Inter';
-  max-width: 100vw;
-  overflow-x: hidden;
-}
-html {
-  font-size: 100%;
-}
-body {
-  font-size: var(--reg);
-}
-a {
-  color: inherit;
-  text-decoration: none;
-}
+
 :root {
   /* Colors */
   --steelbluelowlight: #2e2940;
@@ -179,10 +164,20 @@ a {
   padding: 0;
   margin: 0;
 }
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+html,
+body {
+  font-family: 'Inter';
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+html {
+  font-size: 100%;
+}
+body {
+  font-size: var(--reg);
+}
+main {
+  margin-top: 4rem;
 }
 h1 {
   font-size: var(--xl);
@@ -193,4 +188,13 @@ h2 {
   font-size: var(--lg);
   padding: 1rem 0;
   margin-bottom: 20px;
+}
+a {
+  color: inherit;
+  text-decoration: none;
+}
+@media (prefers-color-scheme: dark) {
+  html {
+    color-scheme: dark;
+  }
 }
