--- a/components/Courses_Section_Home/CoursesSectionHome.module.css
+++ b/components/Courses_Section_Home/CoursesSectionHome.module.css
@@ -1,20 +1,23 @@
 .allSearchers {
   display: flex;
-  justify-content: left;
+  justify-content: space-between;
 }
 .allTextFields {
   display: flex;
-  height: 35vh;
+  height: 28vh;
   justify-content: space-between;
 }
 .buttonAtions {
   display: flex;
   flex-direction: column;
+  height: 100%;
+  justify-content: space-evenly;
 }
-.buttonStyle {
-  border: 0.5px solid black;
-  margin-right: 5px;
-  text-transform: capitalize;
+.coursesTop {
+  display: flex;
+  justify-content: space-between;
+  padding: 30px 0;
+  width: 100%;
 }
 .fieldsTitle {
   display: flex;
@@ -24,16 +27,8 @@
   border: 1px solid white;
   padding: 10px;
 }
-.input {
-  color: black;
-}
-.label {
-  border: 1px solid white;
-  color: black;
-  font-size: x-small;
-  height: 20px;
+.marginTop {
   margin-top: 10px;
-  width: 120px;
 }
 .modalBox {
   background-color: var(--steelbluelowlight);
@@ -44,36 +39,29 @@
   padding: 30px 70px;
   position: absolute;
   top: 25%;
-  width: 800px;
+  width: 700px;
 }
-.modalButton {
-  margin-left: 20px;
+.modalButtons {
+  display: flex;
+  justify-content: space-between;
+  width: 12rem;
 }
 .modalButtonsCont {
   display: flex;
   justify-content: flex-end;
 }
-.studentsTop {
-  display: flex;
-  justify-content: space-between;
-  padding: 30px 40px;
-  width: 80vw;
-}
 .searcherContainer {
-  height: 85vh;
-  padding: 10px 40px;
-  width: 80vw;
+  height: 80vh;
+  padding: 10px 0;
+  width: 100%;
 }
 .searcherField {
   display: flex;
   flex-direction: column;
-  height: 5vh;
-  justify-content: space-between;
-  padding-right: 50px;
 }
 .table {
-  height: 67vh;
   margin-top: 40px;
+  height: 55rem;
   width: 100%;
 }
 .textFieldModal {
