--- a/components/Students_Section_Courses/StudentsSectionCourses.module.css
+++ b/components/Students_Section_Courses/StudentsSectionCourses.module.css
@@ -8,7 +8,6 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 50px;
-  margin-left: 30px;
 }
 .alumnoInfoTop {
   align-items: flex-start;
@@ -16,18 +15,17 @@
   flex-direction: column;
   height: 15vh;
   justify-content: space-between;
-  padding: 30px 30px;
-  width: 80vw;
+  padding: 30px 0;
+  width: 100%;
 }
 .alumnoRoute {
-  margin-left: 30px;
   margin-top: 30px;
 }
 .buttonTop {
-  font-size: medium;
+  font-size: var(--sm);
   height: 50px;
   margin-right: 30px;
-  width: 250px;
+  width: 12rem;
 }
 .modalBox {
   background-color: var(--steelbluelowlight);
@@ -50,9 +48,8 @@
   justify-content: flex-end;
 }
 .table {
-  height: 30vh;
+  height: 30rem;
   margin-bottom: 30px;
-  margin-left: 30px;
 }
 .textFieldModal {
   align-items: flex-start;
