--- a/components/Students_Section_Info/StudentsSectionInfo.module.css
+++ b/components/Students_Section_Info/StudentsSectionInfo.module.css
@@ -4,17 +4,14 @@
   height: 10vh;
   justify-content: space-around;
 }
-.alumnoInfoContainer {
-  margin-left: 30px;
-}
 .alumnoInfoTop {
   align-items: flex-start;
   display: flex;
   flex-direction: column;
   height: 15vh;
   justify-content: space-between;
-  padding: 30px 30px;
-  width: 80vw;
+  padding: 30px 0;
+  width: 100%;
 }
 .alumnoRoute {
   margin-left: 30px;
@@ -29,8 +26,8 @@
   margin-top: 40px;
 }
 .buttonTop {
-  font-size: medium;
+  font-size: var(--sm);
   height: 50px;
   margin-right: 30px;
-  width: 250px;
+  width: 12rem;
 }
