--- a/styles/mui-override.css
+++ b/styles/mui-override.css
@@ -1,3 +1,39 @@
+.css-alftel-MuiDataGrid-root .MuiDataGrid-columnHeader:focus-within,
+.css-alftel-MuiDataGrid-root .MuiDataGrid-cell:focus-within {
+  outline: none;
+}
+.MuiBreadcrumbs-li a,
+.MuiBreadcrumbs-li p {
+  font-size: var(--sm);
+}
+.MuiBreadcrumbs-li p {
+  color: var(--bluelowlight);
+  position: relative;
+  top: 1px;
+}
+.MuiDataGrid-cell .MuiButtonBase-root {
+  margin-right: 0.25rem;
+}
+.MuiDataGrid-cell .MuiButtonBase-root:hover {
+  background-color: var(--steelbluelowlight);
+  color: #fff;
+}
+.MuiDrawer-paper .MuiButtonBase-root {
+  border-radius: 0;
+}
+.MuiDrawer-paper .MuiButtonBase-root.iconButton {
+  border-radius: 100%;
+}
+.MuiButton-sizeMedium {
+  font-size: var(--sm);
+}
+.MuiBox-root {
+  width: 100%;
+}
+.MuiButton-containedPrimary:hover {
+  background: var(--steelbluelowlight);
+  color: #fff;
+}
 .MuiDrawer-docked {
   transition: all 195ms cubic-bezier(0.4, 0, 0.6, 1) 0ms;
   width: 0;
@@ -11,6 +47,6 @@
   width: 100%;
 }
 .MuiPaper-root .MuiButton-root:hover {
-  background: #463777;
+  background: var(--steelbluelowlight);
   color: #fff;
 }
