--- a/components/Students_Section_Home/StudentsSectionHome.module.css
+++ b/components/Students_Section_Home/StudentsSectionHome.module.css
@@ -37,8 +37,7 @@
 }
 .modalBox {
   background-color: var(--steelbluelowlight);
-  border: 2px solid var(--blue);
-  box-shadow: 24;
+  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.6);
   color: var(--bluehighlight);
   left: 20%;
   padding: 30px 70px;
