--- a/styles/globals.css
+++ b/styles/globals.css
@@ -171,7 +171,17 @@ body {
   overflow-x: hidden;
 }
 html {
-  font-size: 100%;
+  font-size: 70%;
+}
+@media (min-width: 1600px) {
+  html {
+    font-size: 100%;
+  }
+}
+@media (min-width: 900px) and (max-width: 1599px) {
+  html {
+    font-size: 85%;
+  }
 }
 body {
   font-size: var(--reg);
@@ -205,6 +215,10 @@ p {
 a {
   color: inherit;
   text-decoration: none;
+}
+.selected {
+  background-color: var(--steelbluelowlight);
+  color: white;
 }
 @media (prefers-color-scheme: dark) {
   html {
