--- a/styles/mui-override.css
+++ b/styles/mui-override.css
@@ -11,6 +11,15 @@
   position: relative;
   top: 1px;
 }
+.MuiDataGrid-panelFooter {
+  gap: 1rem;
+}
+.MuiDataGrid-panelWrapper .MuiDataGrid-panelFooter .MuiButton-root {
+  background: var(--steelblue);
+  color: white;
+  display: flex;
+  justify-content: center;
+}
 .MuiDataGrid-cell .MuiButtonBase-root {
   margin-right: 0.25rem;
 }
@@ -49,4 +58,7 @@
 .MuiPaper-root .MuiButton-root:hover {
   background: var(--steelbluelowlight);
   color: #fff;
+}
+.MuiPaper-elevation .MuiDataGrid-menuList {
+  background: white;
 }
