--- a/components/Courses_Section_Home/CoursesSectionHome.module.css
+++ b/components/Courses_Section_Home/CoursesSectionHome.module.css
@@ -11,6 +11,17 @@
   display: flex;
   justify-content: space-evenly;
 }
+.changesList {
+  background: rgba(0, 0, 0, 0.05);
+  max-height: 120px;
+  overflow-y: scroll;
+  padding: 0.25rem;
+}
+.changesList li {
+  display: block;
+  padding-bottom: 0.5rem;
+  margin: 0 0 0.25rem 0.75rem;
+}
 .modalContainer {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -62,6 +73,11 @@
   height: 60rem;
   margin: 2.5rem 0;
   width: 100%;
+}
+.tableHeader {
+  align-items: center;
+  display: flex;
+  justify-content: space-between;
 }
 .taBorder {
   border: 1px solid var(--steelbluelowlight);
