--- a/components/Courses_Section_Info/CoursesSectionInfo.module.css
+++ b/components/Courses_Section_Info/CoursesSectionInfo.module.css
@@ -33,6 +33,9 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
 }
+.coursesInfoFull {
+  margin-bottom: 2rem;
+}
 .coursesInfoTitle {
   padding-top: 2.5rem;
   padding-bottom: 1.25rem;
