--- a/components/Courses_Section_Home/CoursesSectionHome.module.css
+++ b/components/Courses_Section_Home/CoursesSectionHome.module.css
@@ -62,12 +62,15 @@
   color: var(--blue);
   left: 50%;
   max-height: 90vh;
-  overflow-y: scroll;
+  overflow-y: auto;
   padding: 2rem;
   position: absolute;
   top: 50%;
   transform: translate(-50%, -50%);
   width: 43.75rem;
+}
+.modalButton.variant {
+  background: var(--bluehighlight);
 }
 .modalButtons {
   display: flex;
@@ -158,8 +161,19 @@
 .textarea {
   grid-column: span 2;
 }
+.textAreaWidth {
+  width: 100%;
+}
 .title {
   color: var(--steelbluelowlight);
   font-size: var(--lg);
   margin-bottom: 2rem;
+}
+.updateForm {
+  align-items: flex-start;
+  display: flex;
+  gap: 1rem;
+}
+.updateTitle {
+  margin-bottom: 1rem;
 }
