--- a/components/Courses_Section_Student/CoursesSectionStudent.module.css
+++ b/components/Courses_Section_Student/CoursesSectionStudent.module.css
@@ -20,9 +20,63 @@
 .coursesRoute {
   margin-top: 2rem;
 }
+.enrollStudent .MuiFormLabel-root.MuiInputLabel-root {
+  top: -1rem;
+}
+.modalBox {
+  background-color: var(--white);
+  border-radius: 10px;
+  color: var(--blue);
+  left: 50%;
+  max-height: 90vh;
+  overflow-y: auto;
+  padding: 2rem;
+  position: absolute;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  width: 43.75rem;
+}
+.modalButton.variant {
+  background: var(--bluehighlight);
+}
+.modalButtons {
+  display: flex;
+  justify-content: space-between;
+  width: 12rem;
+}
+.modalButtonsCont {
+  display: flex;
+  justify-content: flex-end;
+}
+.modalButtonsCont button {
+  margin-left: 1rem;
+}
+.modalTextField {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  margin: 2rem 0;
+}
+.modalTextField span {
+  color: red;
+}
+.modalTextField.file {
+  justify-content: end;
+}
+.modalTextField p {
+  color: var(--steelbluelowlight);
+  font-size: var(--xs);
+  margin-bottom: 0.25rem;
+  text-transform: uppercase;
+}
 .table {
   height: 40rem;
   width: 100%;
   margin-top: 1.5rem;
   margin-bottom: 1.5rem;
+}
+.title {
+  color: var(--steelbluelowlight);
+  font-size: var(--lg);
+  margin-bottom: 2rem;
 }
