--- a/styles/mui-override.css
+++ b/styles/mui-override.css
@@ -122,6 +122,7 @@ main.page .MuiDataGrid-cell:focus-within {
 }
 .MuiInputBase-input.MuiOutlinedInput-input {
   display: flex;
+  padding: 0.5rem 1rem;
 }
 .MuiFormLabel-root {
   transform: translate(14px, 4px) scale(1);
@@ -151,6 +152,8 @@ body .MuiOutlinedInput-input {
 }
 .MuiPaper-root .MuiButton-root:hover {
   background: var(--steelbluelowlight);
+  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
+    0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
   color: #fff;
 }
 .MuiPaper-root.MuiAlert-root {
