--- a/components/Courses_Section_Info/CoursesSectionInfo.module.css
+++ b/components/Courses_Section_Info/CoursesSectionInfo.module.css
@@ -37,8 +37,8 @@
   margin-bottom: 2rem;
 }
 .coursesInfoTitle {
-  padding-top: 2.5rem;
   padding-bottom: 1.25rem;
+  padding-top: 2.5rem;
 }
 .coursesInfoTop {
   align-items: center;
@@ -61,13 +61,13 @@
   justify-content: space-between;
   width: 50%;
 }
-.divInfoCont {
-  width: 50%;
-}
 .divInfoColCont {
   display: flex;
   justify-content: space-between;
   margin-top: 2rem;
+}
+.divInfoCont {
+  width: 50%;
 }
 .newLine {
   white-space: pre-line;
@@ -82,6 +82,9 @@
 }
 .textFieldModal.file {
   justify-content: end;
+}
+.textFieldModal p {
+  margin-bottom: 0.5rem;
 }
 .textFieldModal .MuiOutlinedInput-input {
   font-size: var(--reg);
