--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -12,6 +12,7 @@
   margin: 0 auto;
   max-width: 1600px;
   padding: 0 1rem;
+  text-align: center;
 }
 @media (min-width: 1700px) {
   .footerWrap {
