--- a/styles/globals.css
+++ b/styles/globals.css
@@ -225,6 +225,10 @@ a {
   color: inherit;
   text-decoration: none;
 }
+button:hover {
+  box-shadow: 0px 2px 4px -1px rgba(0, 0, 0, 0.2),
+    0px 4px 5px 0px rgba(0, 0, 0, 0.14), 0px 1px 10px 0px rgba(0, 0, 0, 0.12);
+}
 .logoline {
   fill: #3e64ad;
 }
